ckad/namespace-limit-range.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: limitrange
spec: {}
status: {}
