ckad/bb-user101.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bb-user101
  name: bb-user101
spec:
  securityContext:
    runAsUser: 101
  containers:
  - image: busybox
    name: bb-user101
    resources: {}
    command: ["/bin/sh", "-c", "id && sleep 3600;"]
    securityContext:
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
