ckad/cuda-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: cuda-test
  name: cuda-test
spec:
  nodeSelector:
    accelerator: nvidia-tesla-p100
  containers:
  - image: k8s.gcr.io/cuda-vector-add:v0.1
    name: cuda-test
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
