ckad/m2-nginx-bb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: m2
  name: m2
spec:
  volumes:
  - name: vol
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: vol
  restartPolicy: Always
status: {}
