ckad/multi-bb-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bb
spec:
  containers:
  - image: busybox
    name: bb-01
    command: ["/bin/sh", "-c", "echo hello && sleep 3600"]
  - image: busybox
    name: bb-02
    command: ["/bin/sh", "-c", "echo hello && sleep 3600"]
