ckad/ndp-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx2
  name: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      volumes:
      - name: vshare
        emptyDir: {}
      containers:
        - image: nginx
          name: nginx
          resources: {}
          volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: vshare
status: {}
