ckad/ng-cmap.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: config-vol
    configMap:
      name: config2
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
    - name: config-vol
      mountPath: /etc/config
  restartPolicy: Always
status: {}
