ckad/pod-bb-log.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-bb-log
  name: pod-bb-log
spec:
  containers:
  - image: busybox
    name: pod-bb-log
    resources: {}
    command: ["/bin/sh"]
    args: [ "-c", "while true; do echo \"$i: $(date)\"; i=$((i+1)); sleep 1; done"]
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
