ckad/pod-bb-pvc-myvolclaim-01.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-bb-pvc-myvolclaim-01
  name: pod-bb-pvc-myvolclaim-01
spec:
  volumes:
  - name: pvc-vol
    persistentVolumeClaim:
      claimName: myvolumeclaim
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: pod-bb-pvc-myvolclaim-01
    resources: {}
    volumeMounts:
    - mountPath: /etc/foo
      name: pvc-vol
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
