ckad/pod-bb-pvc-myvolclaim-02.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-bb-pvc-myvolclaim-02
  name: pod-bb-pvc-myvolclaim-02
spec:
  volumes:
  - name: pvc-vol
    persistentVolumeClaim:
      claimName: myvolumeclaim
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: pod-bb-pvc-myvolclaim-02
    resources: {}
    volumeMounts:
    - mountPath: /etc/foo
      name: pvc-vol
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
