ckad/pod-limit-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: limitrange
  name: less-mem-nginx
spec:
  containers:
  - image: nginx
    name: less-mem-nginx
    resources:
      limits:
        memory: 500Mi
      requests:
        memory: 100Mi
