ckad/pod-nginx-liveness-ls.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-ng-liveness-ls
  name: pod-ng-liveness-ls
spec:
  containers:
  - image: nginx
    name: pod-ng-liveness-ls
    resources: {}
    livenessProbe:
      exec:
        command:
        - ls
      initialDelaySeconds: 5
      periodSeconds: 5
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
