ckad/pod-nginx-readness-get.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-ng-readiness-get-slash
  name: pod-ng-readiness-get-slash
spec:
  containers:
  - image: nginx
    name: pod-ng-liveness-get-slash
    resources: {}
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 10
      periodSeconds: 10
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
