ckad/pod-nginx-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod
  name: ng-secret-pod
spec:
  volumes:
  - name: ng-secret
    secret:
      #k create secret generic mysecret2 --from-literal=username=admin
      secretName: mysecret2
  containers:
  - image: nginx
    name: ng-secret-pod
    resources: {}
    volumeMounts:
    - name: ng-secret
      mountPath: /etc/foo


  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
